Added a response to a query about the weather in any city